css/layout.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
body {
  background-color: #0b0600;
  color: #c2c2c2;
}

navbar {
  background: var(--violet);
  background: var(--gradient);
}

#pickers {
  background: rgb(48, 25, 1);
  background: linear-gradient(
    180deg,
    rgba(48, 25, 1, 1) 0%,
    rgba(11, 6, 0, 1) 100%
  );
}

#whats-happening {
  border-bottom: 1px solid var(--violet);
  font-family: "Bebas Neue", cursive;
  font-size: 2rem;
  color: rgb(194, 194, 194);
  /*color: #F5793B;*/
}

.modal-title {
  font-family: "Bebas Neue", cursive;
  font-size: 1.5rem;
}

.modal-info-content {
  padding-bottom: 20px;
}
.box {
  position: relative;
}
.ribbon {
  position: absolute;
  right: -5px;
  top: -5px;
  z-index: 1;
  overflow: hidden;
  width: 75px;
  height: 75px;
  text-align: right;
}
.ribbon span {
  font-size: 10px;
  font-weight: bold;
  color: #fff;
  text-transform: uppercase;
  text-align: center;
  line-height: 20px;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  width: 100px;
  display: block;

  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
  position: absolute;
  top: 19px;
  right: -21px;
}
.ribbon span::before {
  content: "";
  position: absolute;
  left: 0px;
  top: 100%;
  z-index: -1;
  border-right: 3px solid transparent;
  border-bottom: 3px solid transparent;
}
.ribbon span::after {
  content: "";
  position: absolute;
  right: 0px;
  top: 100%;
  z-index: -1;
  border-left: 3px solid transparent;

  border-bottom: 3px solid transparent;
}

.ribbon span.ribbon-green {
  background: #79a70a;
  background: linear-gradient(#9bc90d 0%, #79a70a 100%);
}
.ribbon span.ribbon-green::before {
  border-left: 3px solid #79a70a;
  border-top: 3px solid #79a70a;
}
.ribbon span.ribbon-green::after {
  border-right: 3px solid #79a70a;
  border-top: 3px solid #79a70a;
}

.ribbon span.ribbon-red {
  background: #a72f0a;
  background: linear-gradient(#862609 0%, #a72f0a 100%);
}
.ribbon span.ribbon-red::before {
  border-left: 3px solid #a72f0a;
  border-top: 3px solid #a72f0a;
}
.ribbon span.ribbon-red::after {
  border-right: 3px solid #a72f0a;
  border-top: 3px solid #a72f0a;
}

.modal-info-title {
  margin-bottom: 10px;
}
.modal-info-title:after {
  content: "";
  display: block;
  width: 20%;
  height: 1px;
  background-color: var(--violet);
}

.modal-info-title a {
  font: 0.8rem sans-serif;
}


.modal-info-text,
.modal-info-dates {
  display: grid;
  grid-gap: 10px;
  font: 0.8rem sans-serif;
  align-items: center;
  padding-left: 40px;
}
.modal-info-text {
  grid-template-columns: repeat(2, auto);
}
.modal-info-dates {
  grid-template-columns: repeat(4, 1fr);
}

.modal-header .btn-close {
  margin: 0px;
  padding: 0px;
}

#map {
  height: 200px;
}

